src/objects/HeloArmState__mdt.object
<CustomObject>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPurchase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPurchase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isRefinance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isRefinance</label>
        <type>Checkbox</type>
    </fields>
    <label>HeloArmState</label>
    <pluralLabel>HeloArmStates</pluralLabel>
    <listViews>
        <fullName>All_data</fullName>
        <columns>DeveloperName</columns>
        <columns>isActive__c</columns>
        <columns>isPurchase__c</columns>
        <columns>isRefinance__c</columns>
        <filterScope>Everything</filterScope>
        <label>All data</label>
    </listViews>
</CustomObject>